# pyfuzz

./: LICENSE  README.md  list-big.txt  list-huge.txt  list.txt  pyfuzz  pyfuzz.py  pyproject.toml  sharepoint.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml
lists/: asp.txt  directories.txt  php.txt
