[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfuzz-web"
version = "1.1.0"
description = "Comprehensive web path scanner tool designed to facilitate penetration testing and web application security assessment"
authors = [{ name = "Ayoob Ali" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = []

[project.urls]
Homepage = "http://ayoobali.github.io/pyfuzz/"
